--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/davidgbiggs/JackAnalyzer#readme",
   "devDependencies": {
+    "@types/node": "^16.7.4",
     "tslint": "^6.1.3",
     "typescript": "^4.4.2"
   }
