--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,19 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "display": "Node 14",
+  "extends": "@tsconfig/node14/tsconfig.json",
+
   "compilerOptions": {
+    "lib": ["es2020"],
     "module": "commonjs",
-    "esModuleInterop": true,
     "target": "es6",
-    "moduleResolution": "node",
-    "sourceMap": true,
     "outDir": "dist",
-    "strict": true
+
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
-  "lib": ["es2015"]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", ".eslintrc"]
 }
